--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="433727984873-4gc18mpsbs6qlf8p20a46vrk4unc4i9r.apps.googleusercontent.com">
+
+
 </head>
 <body class="fix-header card-no-border fix-sidebar">
 
